--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 PORT=3000
 DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=67021860
-DB_NAME=ymshop
-SESSION_SECRET=ymshop_secret
+DB_USER=your_db_user
+DB_PASSWORD=your_db_password
+DB_NAME=your_db_name
+SESSION_SECRET=your_session_secret
